--- a/index.html
+++ b/index.html
@@ -5,29 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
 <script src="./js/archivos.js"></script>    
+<script src="./js/manejadorRespuesta.js"></script>    
+
 <title>Parcial laboratorio 3</title>
 </head>
 <body>
     
 
 <div  id="tabla"></div>
-<div  id="form">
-
-
-
-    
-</div>
-<div  id="spinner"></div>
-
-<form action="
-">
-
-<input type="radio" name="" id="">
-
-
-
-</form>
-
+<div  id="form"></div>
+<div  id="spinner" ><img src="./img/Spinner-Preloader-Gif.gif" alt="" srcset=""></div>
 
 </body>
 </html>
