--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 
 <title>Parcial laboratorio 3</title>
 </head>
-<body>
+<body id="body">
     
 
 <div  id="tabla"></div>
 <div  id="form"></div>
-<div  id="spinner" ><img src="./img/Spinner-Preloader-Gif.gif" alt="" srcset=""></div>
 
 </body>
 </html>
